examples/simple/argocd-applications/kfdefs/ingress.yaml
"apiVersion": "networking.k8s.io/v1beta1"
"kind": "Ingress"
"metadata":
  "annotations":
    "alb.ingress.kubernetes.io/auth-idp-cognito": "{\"UserPoolArn\":\"arn:aws:cognito-idp:us-east-2:245582572290:userpool/us-east-2_4BlWqtQIh\",\"UserPoolClientId\":\"1ti7c1m75bskf09v7vqtq4cc54\",\"UserPoolDomain\":\"auth.simple.edu.provectus.io\"}"
    "alb.ingress.kubernetes.io/auth-type": "cognito"
    "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:us-east-2:245582572290:certificate/06dab8e1-d094-43f9-99ad-254d347f893e"
    "alb.ingress.kubernetes.io/listen-ports": "[{\"HTTPS\":443}]"
    "alb.ingress.kubernetes.io/scheme": "internet-facing"
    "kubernetes.io/ingress.class": "alb"
  "labels":
    "app": "kubeflow"
  "name": "istio-ingress"
  "namespace": "istio-system"
"spec":
  "rules":
  - "host": "kubeflow.simple.edu.provectus.io"
    "http":
      "paths":
      - "backend":
          "serviceName": "istio-ingressgateway"
          "servicePort": 80
        "path": "/*"
  "tls":
  - "hosts":
    - "kubeflow.simple.edu.provectus.io"
    "secretName": "kubeflow-tls-certs"
